<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>first_test_package</name>
  <version>0.0.0</version>
  <description>練習用のパッケージです。</description>
  <maintainer email="yu-katou@shibuya.co.jp">Yujiro Kato</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>first_test_messages</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
